move nails and threads into a Loom container class